@@ -110,7 +110,7 @@ public class LongValidator extends PatternValidator implements TypeValidator {
      */
     public Long getFixed() {
         if (_useFixed) {
-            return new Long(_fixed);
+            return Long.valueOf(_fixed);
         }
         return null;
     } // -- getFixed
@@ -123,7 +123,7 @@ public class LongValidator extends PatternValidator implements TypeValidator {
      */
     public Long getMaxInclusive() {
         if (_useMax) {
-            return new Long(_max);
+            return Long.valueOf(_max);
         }
         return null;
     } // -- getMaxInclusive
@@ -136,7 +136,7 @@ public class LongValidator extends PatternValidator implements TypeValidator {
      */
     public Long getMinInclusive() {
         if (_useMin) {
-            return new Long(_min);
+            return Long.valueOf(_min);
         }
         return null;
     } // -- getMinInclusive
@@ -150,7 +150,7 @@ public class LongValidator extends PatternValidator implements TypeValidator {
      */
     public Integer getTotalDigits() {
         if (_totalDigits >= 0) {
-            return new Integer(_totalDigits);
+            return Integer.valueOf(_totalDigits);
         }
         return null;
     } // -- getTotalDigits
