@@ -55,7 +55,7 @@ public final class TestTemplate extends TestCase {
         marshaller.setWriter(out);
         
         Entity entity = new Entity();
-        entity.setId(new Integer(100));
+        entity.setId(Integer.valueOf(100));
         entity.setName("entity 100");
         marshaller.marshal(entity);
         
