@@ -1,6 +1,4 @@
 
-import java.util.Vector;
-
 import org.castor.xmlctf.ObjectModelBuilder;
 
 public class PrimitivesBuilder implements ObjectModelBuilder {
@@ -10,20 +8,20 @@ public class PrimitivesBuilder implements ObjectModelBuilder {
      */
     public Object buildInstance() {
         TestPrimitiveToWrapper test = new TestPrimitiveToWrapper();
-        test.setBooleanTestAtt(new Boolean(false));
-        test.setFloatTestAtt(new Float(3.141526f));
-        test.setDoubleTestAtt(new Double(1.171077));
-        test.setIntTestAtt(new Integer(23));
-        test.setIntegerTestAtt(new Long(12));
-        test.setLongTestAtt(new Long(23121311L));
-        test.setShortTestAtt(new Short((short)2));
-        test.setBooleanTest(new Boolean(true));
-        test.setFloatTest(new Float(123456.78f));
-        test.setDoubleTest(new Double(0.6385682166079459));
-        test.setIntTest(new Integer(12));
-        test.addIntegerTest(new Long(325325));
-        test.setLongTest(new Long(98998989898L));
-        test.setShortTest(new Short((short)34));
+        test.setBooleanTestAtt(Boolean.FALSE);
+        test.setFloatTestAtt(Float.valueOf(3.141526f));
+        test.setDoubleTestAtt(Double.valueOf(1.171077));
+        test.setIntTestAtt(Integer.valueOf(23));
+        test.setIntegerTestAtt(Long.valueOf(12));
+        test.setLongTestAtt(Long.valueOf(23121311L));
+        test.setShortTestAtt(Short.valueOf((short)2));
+        test.setBooleanTest(Boolean.TRUE);
+        test.setFloatTest(Float.valueOf(123456.78f));
+        test.setDoubleTest(Double.valueOf(0.6385682166079459));
+        test.setIntTest(Integer.valueOf(12));
+        test.addIntegerTest(Long.valueOf(325325));
+        test.setLongTest(Long.valueOf(98998989898L));
+        test.setShortTest(Short.valueOf((short)34));
 
         return test;
     }
